Bug 1559686 - Reimplement the inputHistory feature in the Quantum Bar. r=adw a=ritu

Differential Revision: https://phabricator.services.mozilla.com/D35364