toolkit/components/places/nsNavHistory.h
@@ -439,16 +439,6 @@ class nsNavHistory final : public nsSupportsWeakReference,
   RefPtr<mozilla::places::Database> mDB;
 
   /**
-   * Recalculates frecency for all pages where frecency < 0, then decays
-   * frecency and inputhistory values. Pages can invalidate frecencies:
-   *  * After a "clear private data"
-   *  * After removing visits
-   *  * After migrating from older versions
-   * This method runs on idle-daily.
-   */
-  nsresult FixAndDecayFrecency();
-
-  /**
    * Loads all of the preferences that we use into member variables.
    *
    * @note If mPrefBranch is nullptr, this does nothing.
